@@ -31,10 +31,12 @@ sub print_formula($@)
 
 sub sprint_number($$)
 {
-    my ($number, $format) = @_;
+    my ( $number, $format ) = @_;
 
-    if( defined $format ) {
-        return sprintf( $format, $number );
+    $number = sprintf $format, $number if defined $format;
+
+    if( $number eq '1' ) {
+        return '';
     } else {
         return $number;
     }
@@ -42,7 +44,7 @@ sub sprint_number($$)
 
 sub sprint_formula($@)
 {
-    my ($formula_hash, $format ) = @_;
+    my ( $formula_hash, $format ) = @_;
 
     # Chemical formulas, according the IUCr recommendations, should
     # use the 'Hill' system used by Chemical Abstracts:
@@ -64,32 +66,23 @@ sub sprint_formula($@)
     # book search on 2009-06-25)
 
     my %formula = %$formula_hash; # make a copy, not to mess up the original
-    my $formula = "";
-    my $separator = "";
+    my $formula = '';
+    my $separator = '';
 
     if( exists $formula{C} ) {
-        if( $formula{C} == 1 ) {
-            $formula .= "C";
-        } else {
-            $formula .= "C" . sprint_number( $formula{C}, $format );
-        }
+        $formula .= 'C' . sprint_number( $formula{C}, $format );
         delete $formula{C};
-        $separator = " ";
+        $separator = ' ';
         if( exists $formula{H} ) {
-            if( $formula{H} == 1 ) {
-                $formula .= $separator . "H";
-            } else {
-                $formula .= $separator . "H" .
-                    sprint_number( $formula{H}, $format );
-            }
+            $formula .= $separator . 'H' .
+                        sprint_number( $formula{H}, $format );
             delete $formula{H};
         }
     }
     for my $key (sort {$a cmp $b} keys %formula) {
         $formula .= $separator . $key .
-            ($formula{$key} != 1 ?
-             sprint_number( $formula{$key}, $format ) : "");
-        $separator = " ";
+                    sprint_number( $formula{$key}, $format );
+        $separator = ' ';
     }
 
     return $formula;
