@@ -36,6 +36,8 @@ cod-tools (unreleased)
     - COD::ErrorHandler:
       - moved the handling of a Perl capture variable into a conditional
         statement in the process_errors() subroutine.
+    - COD::Formulae::Print:
+      - removing redundant quantities '1' from constructed formulae.
 
 cod-tools (3.0.1)
 
